# Sunrise-Frequency-Reporting

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  run_reports.bat
.github/workflows/: codebase_health.yml  ruff_linter.yml
assets/: frequency_report_template.xlsx  pod_agent_report_template.xlsx  pod_report_template.xlsx
report generation/helpers/: datetime_helper.py  os_helper.py
report generation/models/: excel_handler.py
report generation/reports/: booking_reports.py  frequency_reports.py
report_generation/: report_generation.py
report_generation/clients/: outlook_email_client.py  parcel_perfect_database_client.py
report_generation/enums/: email_enums.py  frequency_report_enums.py  report_enums.py  report_type_enums.py
report_generation/helpers/: dataframe_helper.py  datetime_helper.py  excel_helper.py  os_helper.py  string_helper.py  style_helper.py
report_generation/models/: data_extractor.py  data_manipulator.py  email_sender.py  parcel_perfect_client.py
report_generation/reports/: booking_reports.py  champion_reports.py  frequency_reports.py  pod_agent_reports.py  pod_ocd_reports.py  pod_summary_reports.py  summary_reports.py
report_generation/utils/: log_execution_time_decorator.py  retry_decorator.py
research/: Frequency Report Template.xlsx  accumulating_pivot.ipynb  bulk_reports.ipynb  db_connection.ipynb  email_client.ipynb  excel_template 2.ipynb  excel_template.ipynb  modified_dataframe.xlsx  poc.ipynb  style_rows.ipynb
test/: A82 copy.xlsx  modified_dataframe.xlsx  test.ipynb
