[project]
name = "sunrise-frequency-reporting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firebirdsql>=1.3.2",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "pillow>=11.0.0",
    "pre-commit>=4.0.1",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.0",
    "xlsxwriter>=3.2.3",
]
